# Lagarith

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Fibonacci.h  README.md  adb_pull_test_output.sh  android.toolchain.cmake  asole.sh  compact.cpp  compact.h  compact_old.cpp  compression.cpp  config.rc  convert.asm  convert.h  convert_lagarith.cpp  convert_lagarith.h  convert_xvid.cpp  convert_xvid.h  convert_yuy2.cpp  convert_yv12.cpp  convert_yv12.h  decompression.cpp  drvproc.cpp  fibonacci.cpp  huffyuv.def  huffyuv_a.asm  huffyuv_a.h  interface.cpp  lagarith.dsp  lagarith.dsw  lagarith.h  lagarith.sln  lagarith.vcproj  lagarith.vcxproj  lagarith.vcxproj.filters  lagarith64.sln  prediction.cpp  prediction.h  (+7 more)
include/: lagarith.h
src/: compact.cpp  compact.h  compact_old.cpp  compression.cpp  decompression.cpp  drvproc.cpp  fibonacci.cpp  fibonacci.h  interface.cpp  interface.h  lag_sse2neon_ext.h  lagarith.cpp  lagarith_internal.h  lagarith_platform.h  lags_file.cpp  lags_file.h  prediction.cpp  prediction.h  range.cpp  reciprocal_table.inl  threading.cpp  threading.h  zerorle.cpp  zerorle.h
test/: api_tests.cpp  internal_tests.cpp  lagarith_testing.h  stb.c  test_framework.cpp  test_framework.h  test_internal.h  test_main.cpp  tests.cpp  tests.h
test_runner/: CMakeLists.txt
test_runner/test_runner.NativeActivity/: CMakeLists.txt  TestRunner.cpp  TestRunner.hpp  android_native_app_glue.c  android_native_app_glue.h  main.cpp  pch.h
test_runner/test_runner.Packaging/: AndroidManifest.xml.in  CMakeLists.txt  Packaging.androidproj.in  UnitTestRunnerActivity.java.in  build.xml.in  strings.xml.in
